--- a/quiz-exam/.env
+++ b/quiz-exam/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=quiz_exam
 DB_USERNAME=root
-DB_PASSWORD=hello
+DB_PASSWORD=12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
